# ETG

.github/workflows/: ci.yml  etg-prob.yml
etg/: Cargo.toml
etg/etg-core/: Cargo.toml
etg/etg-core/src/: lib.rs
etg/etg-core/tests/: causality.rs  coq_ref_compare.rs  invariance.rs  null_and_composition.rs
etg/etg-evolve/: Cargo.toml
etg/etg-evolve/src/: lib.rs
etg/etg-evolve/tests/: evolve.rs
etg/etg-geom/: Cargo.toml
etg/etg-geom/src/: lib.rs
etg/etg-geom/tests/: slice.rs
etg/etg-prob/: Cargo.toml  README.md
etg/etg-prob/benches/: causal.rs
etg/etg-prob/src/: lib.rs
etg/etg-prob/tests/: estimator.rs  prob.rs  property.rs
etg/etg-wasm/: Cargo.toml  README.md
etg/etg-wasm/src/: error.rs  lib.rs
etg/etg-wasm/src/binary/: cursor.rs  leb128.rs  mod.rs  reader.rs  sections.rs
etg/etg-wasm/src/host/: func.rs  mod.rs
etg/etg-wasm/src/model/: mod.rs  module.rs  types.rs
etg/etg-wasm/src/runtime/: global.rs  instances.rs  memory.rs  mod.rs  store.rs  table.rs
etg/etg-wasm/src/validate/: mod.rs
etg/etg-wasm/tests/: smoke.rs
etg/proofs-coq/: .Base.aux  .DETG.aux  .Examples.aux  .Frames.aux  .GETG.aux  .Invariance.aux  .Makefile.coq.d  .Metric.aux  .PETG.aux  .nra.cache  Base.glob  Base.v  Base.vo  DETG.glob  DETG.v  DETG.vo  Examples.glob  Examples.v  Examples.vo  Frames.glob  Frames.v  Frames.vo  GETG.glob  GETG.v  GETG.vo  Invariance.glob  Invariance.v  Invariance.vo  Makefile  Makefile.coq  Makefile.coq.conf  Metric.glob  Metric.v  Metric.vo  PETG.glob  PETG.v  PETG.vo  _CoqProject
etg/specs/: TOOLCHAIN.md  d-etg.md
(+5 files in other folders)
